--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ ul.navr {
   list-style: none outside;
   padding: 0;
   margin: 0 auto;
-  width: 1170px;
+  max-width: 1170px;
   position: relative;
 }
 li.navitem {
@@ -65,9 +65,25 @@ li.navitem:hover > a {
   flex-grow: 1;
 }
 .megamenu-columns {
-  column-count: 4;
-  column-gap: 40px;
+  /* column-count: 2; */
+  column-width: 185px;
+  /* column-gap: 10px; */
 }
+/* @media (min-width: 768px) {
+  .megamenu-columns {
+    column-count: 3;
+  }
+}
+@media (min-width: 992px) {
+  .megamenu-columns {
+    column-count: 4;
+  }
+}
+@media (min-width: 1200px) {
+  .megamenu-columns {
+    column-count: 4;
+  }
+} */
 .megamenu-items-a {
   color: #000000;
   font-size: 16px;
