--- a/style.css
+++ b/style.css
@@ -54,58 +54,31 @@ li.navitem:hover > a {
   min-height: 99px;
   overflow: hidden;
   overflow-y: auto;
-  /* background-repeat: no-repeat;
-  background-size: 100% 40px, 100% 40px, 100% 14px, 100% 14px;
-  background-attachment: local, local, scroll, scroll; */
 }
 .megamenu-categories {
   padding-top: 5px;
   flex-shrink: 0;
-  /* background: linear-gradient(#7e81be 30%, rgba(126, 129, 190, 0)),
-    linear-gradient(rgba(126, 129, 190, 0), #7e81be 70%) 0 100%,
-    radial-gradient(
-      farthest-side at 50% 0,
-      rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0)
-    ),
-    radial-gradient(
-        farthest-side at 50% 100%,
-        rgba(0, 0, 0, 0.5),
-        rgba(0, 0, 0, 0)
-      )
-      0 100%; */
   background-color: #7e81be;
 }
 .megamenu-category {
   color: white;
   font-size: 18px;
-  font-weight: bold;
   line-height: 44px;
   padding: 0 2rem;
   white-space: nowrap;
   cursor: default;
 }
+.megamenu-category:hover,
 .megamenu-category.active {
   background-color: #e5e6f1;
   color: #7e81be;
 }
+.megamenu-category.active {
+  font-weight: bold;
+}
 .megamenu-items {
   padding: 5px 1rem;
   flex-grow: 1;
-
-  /* background: linear-gradient(#e5e6f1 30%, rgba(229, 230, 241, 0)),
-    linear-gradient(rgba(229, 230, 241, 0), #e5e6f1 70%) 0 100%,
-    radial-gradient(
-      farthest-side at 50% 0,
-      rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0)
-    ),
-    radial-gradient(
-        farthest-side at 50% 100%,
-        rgba(0, 0, 0, 0.5),
-        rgba(0, 0, 0, 0)
-      )
-      0 100%; */
   background-color: #e5e6f1;
 }
 .megamenu-columns {
