--- a/style.css
+++ b/style.css
@@ -2,30 +2,33 @@ body {
   margin: 0;
   font: 15px/1.5 "PT Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-.topr {
-  height: 111px;
-  padding: 1px 0 0;
-}
-.nav-area {
+
+.navbar-inverse {
   background-color: #696a6c;
+  border-color: #696a6c;
+  border-top: 7px solid #dad9da;
 }
-ul.navr {
+
+#navbar {
+}
+#navbar > ul {
   list-style: none outside;
   padding: 0;
   margin: 0 auto;
   max-width: 1170px;
   position: relative;
 }
-li.navitem {
+#navbar > ul > li {
   display: inline-block;
+  position: static;
 }
-a.navitem-a {
+#navbar > ul > li > a {
   display: inline-block;
   padding: 1rem 2rem;
   color: white;
   text-decoration: none;
 }
-li.navitem:hover > a {
+#navbar > ul > li:hover > a {
   background-color: #7e81be;
 }
 .navitem-megamenu {
@@ -41,7 +44,7 @@ li.navitem:hover > a {
 .navitem-megamenu * {
   box-sizing: border-box;
 }
-.navitem.active .navitem-megamenu {
+#navbar > ul > li.active .navitem-megamenu {
   display: block;
 }
 .navitem-megamenu-container {
