--- a/filters/style.css
+++ b/filters/style.css
@@ -6,8 +6,7 @@
   line-height: 1;
 }
 
-#siteBtns {
-}
+/* #siteBtns {} */
 
 #siteBtns * {
   box-sizing: border-box;
@@ -56,6 +55,7 @@
 }
 #siteBtns.open > button.btn.btn-default.dropdown-toggle .caret {
   transform: rotate(180deg);
+  border-top-color: #9b9b9b;
 }
 #siteBtns > ul.dropdown-menu {
   background-color: #dbdbdb;
@@ -75,14 +75,14 @@
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.28);
   padding-top: 0;
   border-radius: 0;
-  display: block;
   font-family: "PT Sans";
 }
 .siteBtns_dropdownmenu-tabs {
   background-color: #005278;
   border: 2px solid #005278;
-  margin: -1px -1px 0 -1px;
   padding: 5px;
+  margin: -1px -1px 0 -1px;
+  width: auto;
 }
 .siteBtns_dropdownmenu-tabbtn a {
   border-radius: 5px;
@@ -94,9 +94,13 @@
   line-height: 26px;
 }
 .nav > li.siteBtns_dropdownmenu-tabbtn > a:hover {
-  background-color: rgba(255, 255, 255, 0.75);
+  background-color: rgba(255, 255, 255, 0.5);
   border-color: #005278;
-
+  color: #005278;
+}
+.nav > li.siteBtns_dropdownmenu-tabbtn > a:focus {
+  background-color: rgba(255, 255, 255, 0.25);
+  border-color: #005278;
   color: #005278;
 }
 .nav-pills > li.siteBtns_dropdownmenu-tabbtn.active > a {
@@ -107,6 +111,7 @@
 .siteBtns_dropdownmenu-search {
   padding: 1rem;
   position: relative;
+  color: #6d7278;
 }
 .siteBtns_dropdownmenu-search input {
   width: 100%;
@@ -114,25 +119,31 @@
   border-color: #7e81be;
 }
 .siteBtns_dropdownmenu-search svg {
-  width: 10px;
-  height: 10px;
   position: absolute;
-  top: 15px;
-  right: 15px;
+  top: 50%;
+  right: 0;
+  margin: -9px 12px 0 0;
 }
 .siteBtns_dropdownmenu-list {
+  margin: 0;
   max-height: 350px;
   overflow: auto;
 }
-.siteBtns_dropdownmenu-listbtn {
+.siteBtns_dropdownmenu-list > li {
+  line-height: 1;
+}
+
+.siteBtns_dropdownmenu-list > li > a {
+  display: block;
   color: #212529;
   font-size: 16px;
   line-height: 23px;
+  text-decoration: none;
+  padding: 5px 1rem;
 }
-.siteBtns_dropdownmenu-listbtn:hover {
+.siteBtns_dropdownmenu-list > li > a:hover {
   background-color: #bfc0df;
 }
-
 /* #siteFilters > button:nth-child(2) {border-radius: 0.4em 0 0 0.4em !important;} */
 /* #siteFilters .dropdown-menu {left: -100px;} */
 
