--- a/page/style.css
+++ b/page/style.css
@@ -51,3 +51,11 @@ body * {
   padding-bottom: 6px;
   margin: 2rem 0 1rem;
 }
+
+.mm-page-swapr span {
+  cursor: pointer;
+}
+.mm-page-swapr span[name="active"] {
+  font-weight: bold;
+  cursor: default;
+}
