--- a/filters/dropdown-tabs.css
+++ b/filters/dropdown-tabs.css
@@ -1,4 +1,3 @@
-
 /* #siteBtns {} */
 
 #siteBtns * {
@@ -68,7 +67,6 @@
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.28);
   padding-top: 0;
   border-radius: 0;
-  font-family: "PT Sans";
 }
 .siteBtns_dropdownmenu-tabs {
   background-color: #005278;
@@ -110,6 +108,9 @@
   width: 100%;
   border-width: 0 0 2px 0;
   border-color: #7e81be;
+}
+.siteBtns_dropdownmenu-search input::-ms-clear {
+  display: none;
 }
 .siteBtns_dropdownmenu-search svg {
   position: absolute;
