--- a/page/style.css
+++ b/page/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font: 15px/1.5 "PT Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 15px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 body * {
   box-sizing: border-box;
